[project]
name = "agentic-workflow-engine"
version = "1.0.0"
description = "A multi-agent AI workflow engine using OpenAI's latest models"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "openai>=1.93.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.1",
    "typing-extensions>=4.7.1",
    "pydantic>=2.4.2",
    "pillow>=11.3.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
